Fix spacing of search field in mobile navigation
Resolves an issue where...

- in Safari
- in mobile navigations where content is length (e.g. Help section with expanded subsections)

...the display of the search field in mobile navigation would shrink unexpectedly.

See: https://github.com/uswds/uswds/pull/3932

--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -34,6 +34,7 @@ article.container,
 
 .usa-header .usa-nav {
   .usa-search {
+    flex-shrink: 0;
     right: 0;
   }
 }
